# yomitore

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  test_badges.rs
.agent-hooks/: dispatcher.sh  pre_tool_guard.sh  review_pipeline.sh  verify_pipeline.sh
.codex/: hooks.json
.codex/hooks/: verify_pipeline.sh
.github/hooks/: hooks.json
.github/workflows/: release.yml
docs/: DESIGN.md  HELP.md  PLAN.md  REQUIREMENTS.md  SPECIFICATIONS.md  TODO.md  requirements_definition.md  specification.md  todo.md
docs/ADR/: 202604261837.md  202607020838.md  202607020928.md  202607020936.md  202607020944.md  202607022206.md  202607170928.md
docs/TASK/: 202607020928.md  202607020936.md  current-task.md
src/: api_client.rs  app.rs  config.rs  error.rs  evaluation.rs  events.rs  help.rs  main.rs  models.rs  reports.rs  stats.rs  stats_analysis.rs  tui.rs  ui.rs
