[package]
name = "yomitore"
version = "0.1.15"
edition = "2024"

[dependencies]
tokio = { version = "1.52.4", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
dirs = "6.0"
toml = "1.1.3"
ratatui = { version = "0.30.2", features = [
    "crossterm",
    "unstable-rendered-line-info",
] }
crossterm = { version = "0.29", features = ["event-stream"] }
rat-text = "3.1"
chrono = { version = "0.4.45", features = ["serde"] }
rand = "0.10.2"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"
indexing_slicing = "deny"
